<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="layout.SettingFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:text="@string/language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:id="@+id/textView1" />
<View
    android:layout_width="match_parent"
    android:layout_height="2dp"
    android:layout_marginBottom="5dp"
    android:background="#000"
    />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/languageGroup"
        android:orientation="vertical">
        <RadioButton
            android:text="@string/english"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioEnglish" />

        <RadioButton
            android:text="@string/traditionalChinese"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioTraditonal" />

        <RadioButton
            android:text="@string/simplifiedChinese"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioSimplified" />
    </RadioGroup>

    <TextView
        android:text="@string/rowNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:id="@+id/textView2" />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="5dp"
        android:background="#000"
        />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/row_spinner" />

</LinearLayout>
